# igs-tools

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  check.sh  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  test.yml
doc/source/: conf.py  index.rst  installation.rst  reference.rst  refs.rst  sitelog.rst
igs_tools/: __init__.py  connection.py  directory.py  utils.py
igs_tools/defines/: __init__.py  constellation.py  data_center.py  rinex.py
igs_tools/sitelog/: __init__.py
igs_tools/sitelog/legacy/: binding.py
igs_tools/sitelog/xsd/: __init__.py  binding.py  parser.py
